--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.88.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
     "next": "16.0.10",
